test/Runner/errors/tests/Hook/Hook.runtime.js
seed("Seed", () => {});
beforeSeed(() => { throw new Error(); });